<resources>
    <string name="app_name">CleverMobile</string>

    <string name="title_login">登陆</string>
    <string name="no_login">未登陆</string>

    <string name="login_OK">登陆成功</string>
    <string name="login_err">登陆失败</string>
    <string name="login_quited">已退出登陆</string>
    <string name="login_dev_ip">IP地址:</string>
    <string name="login_dev_num">级联号</string>
    <string name="login_name">账  号：</string>
    <string name="login_pwd">密  码：</string>
    <string name="login_remember">记住账号/密码</string>
    <string name="login_select">设备选择</string>
    <string name="login_login">连接</string>
    <string name="login_disconnect">断开</string>
    <string name="login_quit">退出</string>
    <string name="login_wait">请等待</string>
    <string name="login_connecting">正在链接</string>
    <string name="login_ip_err">IP地址错误</string>
    <string name="login_ip_null">IP地址为空</string>
    <string name="login_name_null">用户名为空</string>
    <string name="login_pwd_null">密码为空</string>
    <string name="login_please">请登陆</string>
    <string name="login_coned">已登陆</string>

    <string name="btmenu_line">设备状态</string>
    <string name="btmenu_output">输出位</string>
    <string name="btmenu_env">传感器</string>
    <string name="btmenu_setting">设置</string>

    <string name="line_dev_text">  设备相状态</string>
    <string name="line_item">项目</string>
    <string name="line_dsplay">显示</string>
    <string name="line_vol">电压</string>
    <string name="line_cur">电流</string>
    <string name="line_pow">功率</string>
    <string name="line_ele">电能</string>
    <string name="line_pf">功素</string>
    <string name="line_min">最小值:</string>
    <string name="line_max">最大值:</string>
    <string name="line_crMin">临界下限</string>
    <string name="line_crMax">临界上限</string>
    <string name="line_unified">统一设置</string>
    <string name="line_whole">全局设置</string>
    <string name="line_ret_curMax">最大值大于32A</string>
    <string name="line_ret_min">最小值大于最大值</string>
    <string name="line_save">保存</string>
    <string name="line_quit">退出</string>
    <string name="line_ok">确定</string>
    <string name="line_dlg_vol">电  压</string>
    <string name="line_dlg_cur">电  流</string>

    <string name="line_list_items">项目</string>
    <string name="line_list_sw">开关</string>
    <string name="line_list_open">开</string>
    <string name="line_list_close">关</string>
    <string name="line_list_vol">电压</string>
    <string name="line_list_cur">电流</string>
    <string name="line_list_pow">功率</string>
    <string name="line_list_ele">电能</string>
    <string name="line_list_pf">功素</string>
    <string name="line_dlg_title">请选择需要设置的相</string>

    <string name="loop_dev_text">  设备回路状态</string>
    <string name="loop_list_name">回路</string>
    <string name="loop_list_airsw">空开</string>
    <string name="loop_list_cur">电流</string>
    <string name="loop_list_pow">功率</string>
    <string name="loop_list_open">开</string>
    <string name="loop_list_close">关</string>
    <string name="loop_airsw">空开：</string>
    <string name="loop_cur">电流：</string>
    <string name="loop_pow">功率：</string>
    <string name="loop_ele">电能：</string>
    <string name="loop_min">最小值</string>
    <string name="loop_max">最大值</string>
    <string name="loop_crMin">临界下限</string>
    <string name="loop_crMax">临界上限</string>
    <string name="loop_dlg_threshold">阈值设置</string>
    <string name="loop_dlg_sw">开关设置</string>
    <string name="loop_dlg_quit">退出</string>
    <string name="loop_name">回路：</string>
    <string name="loop_unified">统一设置</string>
    <string name="loop_whole">全局设置</string>
    <string name="loop_save">保存</string>
    <string name="loop_open">开</string>
    <string name="loop_close">关</string>
    <string name="loop_sure">确定</string>

    <string name="loop_ret_max">最大值大于16A</string>
    <string name="loop_ret_min">最小值大于最大值</string>
    <string name="loop_ret_crMin">临界下限小于最小值</string>
    <string name="loop_ret_crMax">临界上限大于最大值</string>

    <string name="env_tem">温度</string>
    <string name="env_hum">湿度</string>
    <string name="env_door">门禁</string>
    <string name="env_water">水浸</string>
    <string name="env_smoke">烟雾</string>
    <string name="env_sensor_name">传感器</string>
    <string name="env_value">状态</string>
    <string name="env_min">最小值</string>
    <string name="env_max">最大值</string>
    <string name="env_door_open">打开</string>
    <string name="env_door_close">关闭</string>
    <string name="env_ok">正常</string>
    <string name="env_alarm">报警</string>
    <string name="env_ret_max">最大值不能大于100</string>
    <string name="env_ret_min">最小值大于最大值</string>
    <string name="env_save">保存</string>
    <string name="env_quit">退出</string>
    <string name="env_unified">统一设置</string>
    <string name="env_whole">全局设置</string>

    <string name="output_number">编号</string>
    <string name="output_name">输出位名称</string>
    <string name="output_sw">开关状态</string>
    <string name="output_cur">输出电流</string>
    <string name="output_pow">输出功率</string>
    <string name="output_ele">输出电能</string>
    <string name="output_pf">功率因素</string>
    <string name="output_min">最小值</string>
    <string name="output_max">最大值</string>
    <string name="output_crMin">临界下限</string>
    <string name="output_crMax">临界上限</string>
    <string name="output_cr">临界状态</string>
    <string name="output_status">工作状态</string>
    <string name="output_open">开</string>
    <string name="output_close">关</string>
    <string name="output_alarm">报警</string>
    <string name="output_cr_ok">正常</string>
    <string name="output_cr_alarm">接近</string>
    <string name="output_unified">统一设置</string>
    <string name="output_whole">全局设置</string>

    <string name="output_dlg_number">编号:</string>
    <string name="output_dlg_name">名称:</string>
    <string name="output_dlg_swstate">开关:</string>
    <string name="output_dlg_cur">电流:</string>
    <string name="output_dlg_pow">功率:</string>
    <string name="output_dlg_ele">电能:</string>
    <string name="output_dlg_status">状态:</string>

    <string name="output_ret_max">最大值大于16A</string>
    <string name="output_ret_min">最小值大于最大值</string>
    <string name="output_ret_crMin">临界下限小于最小值</string>
    <string name="output_ret_crMax">临界上限大于最大值</string>

    <string name="output_dlg_sw">开关设置</string>
    <string name="output_dlg_threshold">阈值设置</string>
    <string name="output_dlg_details">查看详情</string>
    <string name="output_dlg_quit">退出</string>
    <string name="output_dlg_save">保存</string>
    <string name="output_dlg_sure">确定</string>

    <string name="status_OK">正常</string>
    <string name="status_line">在线</string>
    <string name="status_alarm">报警</string>
    <string name="status_offLine">离线</string>

    <string name="set_dev_info"> 设备基本信息</string>
    <string name="set_dev_maintain"> 设备维护</string>
    <string name="set_dev_name">设备名称:</string>
    <string name="set_name_null">设备名为空，请重新输入！</string>
    <string name="set_dev_usr"> 设备账号:</string>
    <string name="set_dev_pwd"> 设备密码:</string>
    <string name="set_usr_null">账户不能为空!</string>
    <string name="set_pwd_null">密码不能为空!</string>

    <string name="set_cmd_title">设备维护</string>
    <string name="set_cmd_res">设备重启</string>
    <string name="set_cmd_factory">恢复出厂设置</string>
    <string name="set_cmd_submit">提交</string>

    <string name="set_save">保存</string>
    <string name="set_save_ok">保存成功</string>
    <string name="set_err_connect">保存错误</string>

</resources>
