<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_cmd_title"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/resRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_cmd_res"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/factoryRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_cmd_factory"/>
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_cmd_submit"/>

</LinearLayout>